# ArtisanForge

./: .gitignore  architecture.md
.github/workflows/: genesis.yml
contracts/: ArtisanForgeNFT.sol
db/: schema.sql
mobile_companion/lib/: main.dart
scripts/: genesis.sh
services/: admin_api.rb
src/cpp_engine/src/: artisan_tensor_engine.cpp
src/go_gateway/: api_gateway.go
src/python_ai/: ai_guild_orchestrator.py
src/react_ui/src/: App.jsx
src/wasm_engine/: Cargo.toml
src/wasm_engine/src/: lib.rs
