[package]
name = "artisan-wasm-engine"
version = "1.0.0"
authors = ["Quantum Synaptic Dynamics Inc. <darkforge.research@outlook.com>"]
edition = "2021"
description = "High-performance in-browser image processing for ArtisanForge"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
# The image crate handles pixel-level manipulation. We restrict features to keep the WASM binary tiny.
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
